# death-by-savegame-editor

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: context.md  copilot_instructions.md
data/logo/: logo-square.aseprite
data/saves/: 28gems  32gems  33gems  37gems  42gems  46gems  save.hocon
dbs-cli/: Cargo.toml  README.md
dbs-cli/src/: main.rs
dbs-core/: Cargo.toml  README.md
dbs-core/src/: codec.rs  crypto.rs  lib.rs
dbs-gui/: Cargo.toml  README.md
dbs-gui/src/: backup.rs  editor_state.rs  hocon_editor.rs  hocon_parser.rs  main.rs
dbs-gui/src/services/: mod.rs  save_file_service.rs  save_locator.rs
saves/: 0gems  13336gems  13337gems  424243gems  51gems
scripts/: dbs_codec.py  fit_extra4.py  payload.hocon  payload.txt  payload_reset.txt  verify_trailer.py
scripts/gdb/: dump_plain_on_encrypt.gdb
