[workspace]
resolver = "2"
members = [
    "dbs-core",
    "dbs-cli",
    "dbs-gui",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["tolik518"]
repository = "https://github.com/tolik518/death-by-savegame-editor"
license = "MIT"

[workspace.dependencies]
dbs-core = { path = "dbs-core" }

# Common dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# GUI dependencies
eframe = { version = "0.33", features = ["default", "default_fonts"] }
egui_extras = { version = "*", features = ["default", "all_loaders", "image"] }
egui = "0.33"
rfd = "0.15"
chrono = "0.4"
indexmap = "2.0"
