[package]
name = "dbs-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "dbs-gui"

[[bin]]
name = "dbs-gui"
path = "src/main.rs"

[dependencies]
dbs-core.workspace = true
eframe.workspace = true
egui_extras.workspace = true
egui.workspace = true
rfd.workspace = true
chrono.workspace = true
anyhow.workspace = true
indexmap.workspace = true

[dev-dependencies]
tempfile = "3.8"
